z-index issues

--- a/styles.css
+++ b/styles.css
@@ -79,10 +79,10 @@ body {
 }
 
 .cart-contents {
-    z-index: 162;
+    z-index: 160;
     right: -300px;
     top: 0;
-    padding-top: 100px;
+    padding-top: 120px;
     transition: transform 0.3s ease-in-out;
     position: fixed;
     background-color: var(--bg-banner-nav);
@@ -267,9 +267,9 @@ hr.gradient {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 120px; /* Match the height of your site-banner */
+    height: 120px;
     z-index: 161;
-    padding: 0 80px; /* Add padding to prevent overlap with hamburger and cart icons */
+    padding: 0 80px;
 }
 
 .mobile-logo img {
@@ -322,7 +322,7 @@ hr.gradient {
         color: var(--text-highlight);
     }
     .container {
-        padding-top: 130px; /* Adjust this value as needed for desktop */
+        padding-top: 130px; 
     }
     .desktop-cart {
         display: block;
@@ -350,7 +350,7 @@ hr.gradient {
         position: absolute;
         right: max(30px, min(800px, calc((100vw - 1100px) / 2)));
         cursor: pointer;
-        z-index: 160;
+        z-index: 300;
     }
 }
 
